# chrono-s_camera

./: CMakeLists.txt  README.md  config.ini
include/: Application.h  CaptureSession.h  ConfigManager.h  HotkeyManager.h  HotkeyUtils.h  SettingsWindow.h  Utility.h  WebProcessor.h
src/: Application.cpp  CaptureSession.cpp  ConfigManager.cpp  HotkeyManager.cpp  HotkeyUtils.cpp  SettingsWindow.cpp  Utility.cpp  WebProcessor.cpp  main.cpp
